changed favicon and fixed the form

--- a/index.html
+++ b/index.html
@@ -1,206 +1,270 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sell My House Ocala - Get a Cash Offer Today</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
-<body>
-  <header>
-    <div class="container">
-      <div class="logo">
-        <i class="fas fa-home"></i>
-        <span>Sell My House Ocala</span>
-      </div>
-      <div class="contact">
-        <a href="tel:3525551234" class="phone-link">
-          <i class="fas fa-phone"></i>
-          (352) 555-1234
-        </a>
-        <a href="#form" class="btn">Get Cash Offer</a>
-      </div>
-    </div>
-  </header>
-
-  <main>
-    <section class="hero">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sell My House Ocala - Get a Cash Offer Today</title>
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="favicon.png" />
+    <link rel="apple-touch-icon" href="favicon.png" />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+  </head>
+  <body>
+    <header>
       <div class="container">
-        <div class="hero-content">
-          <div class="hero-text">
-            <h1>Sell Your House Fast In Ocala, FL</h1>
-            <p>We buy houses in any condition. Get a fair cash offer with no fees or commissions.</p>
-            <div class="hero-buttons">
-              <a href="tel:3525551234" class="btn btn-primary">
-                <i class="fas fa-phone"></i> Call Now
-              </a>
-              <a href="#how-it-works" class="btn btn-outline">Learn More</a>
-            </div>
-            <div class="benefits">
-              <div class="benefit">
-                <i class="fas fa-check-circle"></i>
-                <span>No Repairs</span>
+        <div class="logo">
+          <i class="fas fa-home"></i>
+          <span>Sell My House Ocala</span>
+        </div>
+        <div class="contact">
+          <a href="tel:3525551234" class="phone-link">
+            <i class="fas fa-phone"></i>
+            (352) 555-1234
+          </a>
+          <a href="#form" class="btn">Get Cash Offer</a>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <section class="hero">
+        <div class="container">
+          <div class="hero-content">
+            <div class="hero-text">
+              <h1>Sell Your House Fast In Ocala, FL</h1>
+              <p>
+                We buy houses in any condition. Get a fair cash offer with no
+                fees or commissions.
+              </p>
+              <div class="hero-buttons">
+                <a href="tel:3525551234" class="btn btn-primary">
+                  <i class="fas fa-phone"></i> Call Now
+                </a>
+                <a href="#how-it-works" class="btn btn-outline">Learn More</a>
               </div>
-              <div class="benefit">
-                <i class="fas fa-check-circle"></i>
-                <span>No Fees</span>
-              </div>
-              <div class="benefit">
-                <i class="fas fa-check-circle"></i>
-                <span>No Commissions</span>
+              <div class="benefits">
+                <div class="benefit">
+                  <i class="fas fa-check-circle"></i>
+                  <span>No Repairs</span>
+                </div>
+                <div class="benefit">
+                  <i class="fas fa-check-circle"></i>
+                  <span>No Fees</span>
+                </div>
+                <div class="benefit">
+                  <i class="fas fa-check-circle"></i>
+                  <span>No Commissions</span>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="form-card" id="form">
-            <div class="form-header">
-              <h2>Get Your Cash Offer</h2>
-              <p>Fill out the form below to get started</p>
-            </div>
-            <div class="form-content">
-              <form id="property-form">
-                <div class="form-group">
-                  <label for="name">Full Name</label>
-                  <input type="text" id="name" placeholder="John Smith" required>
-                </div>
-                <div class="form-group">
-                  <label for="phone">Phone Number</label>
-                  <input type="tel" id="phone" placeholder="(352) 555-1234" required>
-                </div>
-                <div class="form-group">
-                  <label for="email">Email Address</label>
-                  <input type="email" id="email" placeholder="john@example.com" required>
-                </div>
-                <div class="form-group">
-                  <label for="address">Property Address</label>
-                  <input type="text" id="address" placeholder="123 Main St, Ocala, FL 34470" required>
-                </div>
-                <div class="form-group">
-                  <label>Property Condition</label>
-                  <div class="radio-group">
-                    <div class="radio-option">
-                      <input type="radio" name="condition" id="good" value="good">
-                      <label for="good">Good</label>
-                    </div>
-                    <div class="radio-option">
-                      <input type="radio" name="condition" id="average" value="average" checked>
-                      <label for="average">Average</label>
-                    </div>
-                    <div class="radio-option">
-                      <input type="radio" name="condition" id="poor" value="poor">
-                      <label for="poor">Needs Work</label>
+            <div class="form-card" id="form">
+              <div class="form-header">
+                <h2>Get Your Cash Offer</h2>
+                <p>Fill out the form below to get started</p>
+              </div>
+              <div class="form-content">
+                <form id="property-form">
+                  <div class="form-group">
+                    <label for="name">Full Name</label>
+                    <input
+                      type="text"
+                      id="name"
+                      placeholder="John Smith"
+                      required
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="phone">Phone Number</label>
+                    <input
+                      type="tel"
+                      id="phone"
+                      placeholder="(352) 555-1234"
+                      required
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="email">Email Address</label>
+                    <input
+                      type="email"
+                      id="email"
+                      placeholder="john@example.com"
+                      required
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label for="address">Property Address</label>
+                    <input
+                      type="text"
+                      id="address"
+                      placeholder="123 Main St, Ocala, FL 34470"
+                      required
+                    />
+                  </div>
+                  <div class="form-group">
+                    <label>Property Condition</label>
+                    <div class="radio-group">
+                      <div class="radio-option">
+                        <input
+                          type="radio"
+                          name="condition"
+                          id="good"
+                          value="good"
+                        />
+                        <label for="good">Good</label>
+                      </div>
+                      <div class="radio-option">
+                        <input
+                          type="radio"
+                          name="condition"
+                          id="average"
+                          value="average"
+                          checked
+                        />
+                        <label for="average">Average</label>
+                      </div>
+                      <div class="radio-option">
+                        <input
+                          type="radio"
+                          name="condition"
+                          id="poor"
+                          value="poor"
+                        />
+                        <label for="poor">Needs Work</label>
+                      </div>
                     </div>
                   </div>
-                </div>
-                <div class="form-group">
-                  <label for="timeframe">Timeframe to Sell</label>
-                  <select id="timeframe" required>
-                    <option value="" disabled selected>Select timeframe</option>
-                    <option value="immediate">As soon as possible</option>
-                    <option value="30days">Within 30 days</option>
-                    <option value="60days">Within 60 days</option>
-                    <option value="90days">Within 90 days</option>
-                    <option value="exploring">Just exploring options</option>
-                  </select>
-                </div>
-                <div class="form-group">
-                  <label for="message">Additional Information</label>
-                  <textarea id="message" placeholder="Tell us more about your property..."></textarea>
-                </div>
-                <button type="submit" class="btn btn-full">Get My Cash Offer</button>
-              </form>
+                  <div class="form-group">
+                    <label for="timeframe">Timeframe to Sell</label>
+                    <select id="timeframe" required>
+                      <option value="" disabled selected>
+                        Select timeframe
+                      </option>
+                      <option value="immediate">As soon as possible</option>
+                      <option value="30days">Within 30 days</option>
+                      <option value="60days">Within 60 days</option>
+                      <option value="90days">Within 90 days</option>
+                      <option value="exploring">Just exploring options</option>
+                    </select>
+                  </div>
+                  <div class="form-group">
+                    <label for="message">Additional Information</label>
+                    <textarea
+                      id="message"
+                      placeholder="Tell us more about your property..."
+                    ></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-full">
+                    Get My Cash Offer
+                  </button>
+                </form>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section class="how-it-works" id="how-it-works">
+      <section class="how-it-works" id="how-it-works">
+        <div class="container">
+          <div class="section-header">
+            <h2>How It Works</h2>
+            <p>
+              Our simple 3-step process makes selling your house quick and
+              hassle-free
+            </p>
+          </div>
+          <div class="steps">
+            <div class="step-card">
+              <div class="step-icon">
+                <i class="fas fa-phone"></i>
+              </div>
+              <h3>1. Contact Us</h3>
+              <p>
+                Fill out our form or call us directly. We'll gather some basic
+                information about your property.
+              </p>
+            </div>
+            <div class="step-card">
+              <div class="step-icon">
+                <i class="fas fa-dollar-sign"></i>
+              </div>
+              <h3>2. Get Your Offer</h3>
+              <p>
+                We'll evaluate your property and present you with a fair,
+                no-obligation cash offer.
+              </p>
+            </div>
+            <div class="step-card">
+              <div class="step-icon">
+                <i class="fas fa-clock"></i>
+              </div>
+              <h3>3. Close On Your Timeline</h3>
+              <p>
+                Accept the offer and close on the date of your choice. Get cash
+                in hand in as little as 7 days.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="locations">
+        <div class="container">
+          <div class="section-header">
+            <h2>We Buy Houses In</h2>
+            <p>Serving Ocala and surrounding areas in Marion County</p>
+          </div>
+          <div class="location-grid">
+            <div class="location-card">
+              <i class="fas fa-map-marker-alt"></i>
+              <span>Ocala</span>
+            </div>
+            <div class="location-card">
+              <i class="fas fa-map-marker-alt"></i>
+              <span>Silver Springs</span>
+            </div>
+            <div class="location-card">
+              <i class="fas fa-map-marker-alt"></i>
+              <span>Belleview</span>
+            </div>
+            <div class="location-card">
+              <i class="fas fa-map-marker-alt"></i>
+              <span>Dunnellon</span>
+            </div>
+            <div class="location-card">
+              <i class="fas fa-map-marker-alt"></i>
+              <span>Anthony</span>
+            </div>
+            <div class="location-card">
+              <i class="fas fa-map-marker-alt"></i>
+              <span>Citra</span>
+            </div>
+            <div class="location-card">
+              <i class="fas fa-map-marker-alt"></i>
+              <span>Reddick</span>
+            </div>
+            <div class="location-card">
+              <i class="fas fa-map-marker-alt"></i>
+              <span>Fort McCoy</span>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
       <div class="container">
-        <div class="section-header">
-          <h2>How It Works</h2>
-          <p>Our simple 3-step process makes selling your house quick and hassle-free</p>
-        </div>
-        <div class="steps">
-          <div class="step-card">
-            <div class="step-icon">
-              <i class="fas fa-phone"></i>
-            </div>
-            <h3>1. Contact Us</h3>
-            <p>Fill out our form or call us directly. We'll gather some basic information about your property.</p>
-          </div>
-          <div class="step-card">
-            <div class="step-icon">
-              <i class="fas fa-dollar-sign"></i>
-            </div>
-            <h3>2. Get Your Offer</h3>
-            <p>We'll evaluate your property and present you with a fair, no-obligation cash offer.</p>
-          </div>
-          <div class="step-card">
-            <div class="step-icon">
-              <i class="fas fa-clock"></i>
-            </div>
-            <h3>3. Close On Your Timeline</h3>
-            <p>Accept the offer and close on the date of your choice. Get cash in hand in as little as 7 days.</p>
-          </div>
+        <p>&copy; 2025 Sell My House Ocala. All rights reserved.</p>
+        <div class="footer-links">
+          <a href="#">Privacy Policy</a>
+          <a href="#">Terms of Service</a>
         </div>
       </div>
-    </section>
+    </footer>
 
-    <section class="locations">
-      <div class="container">
-        <div class="section-header">
-          <h2>We Buy Houses In</h2>
-          <p>Serving Ocala and surrounding areas in Marion County</p>
-        </div>
-        <div class="location-grid">
-          <div class="location-card">
-            <i class="fas fa-map-marker-alt"></i>
-            <span>Ocala</span>
-          </div>
-          <div class="location-card">
-            <i class="fas fa-map-marker-alt"></i>
-            <span>Silver Springs</span>
-          </div>
-          <div class="location-card">
-            <i class="fas fa-map-marker-alt"></i>
-            <span>Belleview</span>
-          </div>
-          <div class="location-card">
-            <i class="fas fa-map-marker-alt"></i>
-            <span>Dunnellon</span>
-          </div>
-          <div class="location-card">
-            <i class="fas fa-map-marker-alt"></i>
-            <span>Anthony</span>
-          </div>
-          <div class="location-card">
-            <i class="fas fa-map-marker-alt"></i>
-            <span>Citra</span>
-          </div>
-          <div class="location-card">
-            <i class="fas fa-map-marker-alt"></i>
-            <span>Reddick</span>
-          </div>
-          <div class="location-card">
-            <i class="fas fa-map-marker-alt"></i>
-            <span>Fort McCoy</span>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <div class="container">
-      <p>&copy; 2025 Sell My House Ocala. All rights reserved.</p>
-      <div class="footer-links">
-        <a href="#">Privacy Policy</a>
-        <a href="#">Terms of Service</a>
-      </div>
-    </div>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
